force-app/main/default/objects/Service__c/fields/Service_Number_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Number_Location__c</fullName>
    <label>Service Number Location</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>