force-app/main/default/objects/Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Office Admin</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>