force-app/main/default/objects/Service__c/fields/Total_Service_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Days__c</fullName>
    <formula>End_Date__c  -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>