force-app/main/default/objects/Service__c/validationRules/Start_Date_should_be_less_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_should_be_less_than_End_Date</fullName>
    <active>true</active>
    <description>Start Date should be less than End Date.</description>
    <errorConditionFormula>Start_Date__c   &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date should be less than End Date.</errorMessage>
</ValidationRule>